--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "My New Tab Extension",
+  "name": "NewTab_by_Cat",
   "version": "1.0",
-  "description": "A custom new tab page.",
+  "description": "A simple cat themed tab page.",
   "permissions": [
     "storage"
   ],
@@ -10,7 +10,7 @@
     "newtab": "pages/home.html"
   },
   "action": {
-    "default_popup": "pages/home.html",
+    "default_popup": "pages/popup.html",
     "default_icon": {
       "16": "images/icon16.png",
       "48": "images/icon48.png",
