--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "NewTab_by_Cat",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A simple cat themed tab page.",
   "permissions": [],
   "chrome_url_overrides": {
@@ -19,5 +19,10 @@
     "16": "images/icon16.png",
     "48": "images/icon48.png",
     "128": "images/icon128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "@newtab_by_cat.kittkat"
+    }
   }
 }
